--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,4 @@
-import(gRbase, qpgraph, Rgraphviz)
+import(gRbase, qpgraph)
 export(clique.var.test, clique.mean.test,
        pathway.var.test, pathway.mean.test,
        render.significant.cliques)
