--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,22 @@
 Package: topologyGSA
-Version: 1.2.0
-Date: 2012-07-12
-Title: topologyGSA
+Version: 1.2.1
+Date: 2013-06-25
+Title: Gene Set Analysis Exploiting Pathway Topology
 Author: Sofia Massa, Gabriele Sales
 Maintainer: Gabriele Sales <gabriele.sales@unipd.it>
-Description: Package description.
+Description: Using Gaussian graphical models we propose a novel
+        approach to perform pathway analysis using gene expression.
+        Given the structure of a graph (a pathway) we introduce two
+        statistical tests to compare the mean and the concentration
+        matrices between two groups. Specifically, these tests can be
+        performed on the graph and on its connected components
+        (cliques).
 Depends: gRbase, qpgraph, fields
+Imports: RBGL
 Suggests: Rgraphviz
 License: AGPL-3
 LazyLoad: yes
-Packaged: 2013-02-21 15:18:23 UTC; border
+Packaged: 2013-06-26 05:42:36 UTC; border
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-03-01 15:06:49
+Date/Publication: 2013-06-26 09:28:32
