--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,4 +1,5 @@
 import(gRbase, qpgraph)
+importFrom(RBGL, maxClique)
 export(clique.var.test, clique.mean.test,
        pathway.var.test, pathway.mean.test,
        render.significant.cliques)
