--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: topologyGSA
-Version: 1.4.2
-Date: 2013-12-12
+Version: 1.4.3
+Date: 2014-03-26
 Title: Gene Set Analysis Exploiting Pathway Topology
 Author: Sofia Massa, Gabriele Sales
 Maintainer: Gabriele Sales <gabriele.sales@unipd.it>
@@ -10,11 +10,11 @@ Description: Using Gaussian graphical models we propose a novel approach to
              tests to compare the mean and the concentration matrices between
              two groups. Specifically, these tests can be performed on the
              graph and on its connected components (cliques).
-Depends: gRbase, qpgraph, fields
+Imports: graph, gRbase (>= 1.7), qpgraph, fields
 Suggests: Rgraphviz
 License: AGPL-3
 LazyLoad: yes
-Packaged: 2013-12-12 15:11:41 UTC; border
+Packaged: 2014-03-26 13:25:26 UTC; sales
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-12-12 16:47:55
+Date/Publication: 2014-03-26 17:46:08
