--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: topologyGSA
-Version: 1.4.3
-Date: 2014-03-26
+Version: 1.4.4
+Date: 2014-07-31
 Title: Gene Set Analysis Exploiting Pathway Topology
 Author: Sofia Massa, Gabriele Sales
 Maintainer: Gabriele Sales <gabriele.sales@unipd.it>
@@ -10,11 +10,11 @@ Description: Using Gaussian graphical models we propose a novel approach to
              tests to compare the mean and the concentration matrices between
              two groups. Specifically, these tests can be performed on the
              graph and on its connected components (cliques).
-Imports: graph, gRbase (>= 1.7), qpgraph, fields
+Imports: graph, gRbase (>= 1.7), qpgraph, fields (>= 7.0)
 Suggests: Rgraphviz
-License: AGPL-3
+License: GPL-3
 LazyLoad: yes
-Packaged: 2014-03-26 13:25:26 UTC; sales
+Packaged: 2014-08-01 13:56:43 UTC; border
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2014-03-26 17:46:08
+Date/Publication: 2014-08-02 18:27:38
