--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,11 @@
 import(graph, gRbase, qpgraph, fields)
+importFrom(stats, cov, pchisq, pf, qchisq, t.test)
 
 export(clique.var.test, clique.mean.test,
        pathway.var.test, pathway.mean.test,
-       render.significant.cliques,
-       print.clique.var.test, print.clique.mean.test,
-       print.pathway.var.test, print.pathway.mean.test)
+       render.significant.cliques)
+
+S3method(print, clique.var.test)
+S3method(print, clique.mean.test)
+S3method(print, pathway.var.test)
+S3method(print, pathway.mean.test)
